# HttpServerForDummies

./: CMakeLists.txt  HttpHeaderReader.cpp  HttpHeaderReader.h  README.md  SocketConnection.cpp  SocketConnection.h
IO/: IoWriter.cpp
Request/: HeaderParser.cpp  HeaderParser.h  RequestBase.cpp  RequestBase.h  RequestGet.cpp  RequestGet.h  RequestManager.cpp  RequestManager.h  RequestPost.cpp  RequestPost.h
